# dns-manager

./: .cursorrules  .gitignore  BACKGROUND_AGENT_REPORT.md  BAG-BOT-INSTRUCTIONS.md  CHANGES.md  Cargo.toml  Cursor IDE_ __Bag Bot (BugBot)__ и __Focus Agent W.md  DEPLOYMENT.md  IMPROVEMENTS_REPORT.md  README.md  README_AGENT.md  README_REVIEW.md  REVIEW_SUMMARY.md  SECURITY_FIXES.md  TODO.md  create-portable.ps1  memory.md
.cursor/rules/: character-encoding.mdc  ci-cd-setup.mdc  dns-manager-development.mdc  error-handling.mdc  gui-responsiveness.mdc  modular-architecture.mdc  powershell-integration.mdc
.github/workflows/: rust.yml
src/: auto_startup.rs  error.rs  executor.rs  main.rs  notifications.rs  settings.rs  tray.rs  validation.rs
src/dns/: mod.rs  providers.rs  speed_test.rs
src/network/: adapters.rs  dns_utils.rs  mod.rs
src/ui/: components.rs  mod.rs  tabs.rs
