[package]
name = "dns-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["glow"] }
egui = "0.24"
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros"] }
winapi = { version = "0.3", features = ["windef", "winuser"] }
serde_json = "1.0"
encoding_rs = "0.8"
